# chessroad

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: cchess-engine.cpp  engine
android/app/src/main/java/cn/apppk/books/flutterchess/: CChessEngine.java  MainActivity.java
android/app/src/profile/: AndroidManifest.xml
eleeye/: base.h  book.h  command-channel.cpp  command-channel.h  command-queue.cpp  command-queue.h  eleeye.cpp  eleeye.h  engine-state.h  evaluate.cpp  genmoves.cpp  hash.cpp  hash.h  movesort.cpp  movesort.h  position.cpp  position.h  preeval.cpp  pregen.cpp  pregen.h  rc4prng.h  search.cpp  search.h  ucci.cpp  ucci.h  x86asm.h
ios/Runner/: AppDelegate.h  AppDelegate.m  CChessEngine.h  CChessEngine.mm  Info.plist  engine
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/board/: board-painter.dart  board-widget.dart  painter-base.dart  pieces-painter.dart  words-on-board.dart
lib/cchess/: cc-base.dart  cc-recorder.dart  cc-rules.dart  phase.dart  step-enum.dart  step-name.dart  steps-validate.dart
lib/common/: color-consts.dart  config.dart  toast.dart
lib/engine/: chess-db.dart  cloud-engine.dart  engine.dart  native-engine.dart
lib/game/: battle.dart
lib/routes/: battle-page.dart  main-menu.dart  rank-page.dart  settings-page.dart
lib/services/: audios.dart  player.dart  ranks.dart
test/: widget_test.dart
